--- a/app/src/main/res/layout/activity_appliances.xml
+++ b/app/src/main/res/layout/activity_appliances.xml
@@ -12,6 +12,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/room"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30sp"
