--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -148,13 +148,13 @@
                     <ImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        app:srcCompat="@drawable/userr" />
+                        app:srcCompat="@drawable/ic_baseline_tv" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="users"
+                        android:text="Appliances"
                         android:textColor="#6f6f6f"
                         android:textSize="18sp" />
                 </LinearLayout>
